# DIGITALLY_TRANSFORMING_COMPANIES

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
ingest/: linkedin_jobs.py  tech_stack.py
narrative/: evidence_summary.py  narrative.py
output/: checkpoint.json  company_cache.json  digitally_transforming_companies_ME.html
output/job_history/: ACIERTA.json  ADCO_(AI_Digitex_Company).json  ARC_Document_Solutions.json  Adams_Street_Partners.json  Addepar.json  Agoda.json  Alchemy_Global_Talent_Solutions.json  AllClear_Aerospace_&_Defense.json  All_for_One_Egypt.json  Allied_Solutions_LLC.json  Alpaca.json  Amazon.json  American_International_Contractors,_Inc..json  Apache_Corporation.json  BWE.json  Backpack.json  Beijing_Oriental_Yuhong_Waterproof_Technology_Co.,Ltd.json  Benco_Dental.json  Blaize.json  Bloom_Education.json  Boeing.json  Braze.json  Brown_Advisory.json  Bunge.json  Bush_Hog.json  CAE.json  CAE_USA.json  CJ_ENM_America.json  Call_For_Referral.json  Cardless.json  Center_School_District_58.json  Charcoalblue.json  Checkpoint_Systems.json  Chelsea_Technologies.json  Chevron.json  City_of_Delaware,_OH.json  (+201 more)
process/: company_cleaner.py  company_geo.py  country_filter.py  geo_inference.py  job_window.py  role_classifier.py  role_evolution.py  sector_cluster.py  sector_inference.py  seniority.py  stage.py  tech_inference.py  time_series.py  timeline.py
scoring/: confidence.py  dts.py  explainability.py
seed/: company_seed.py
utils/: cache.py  checkpoint.py  file_utils.py  job_history.py
visualize/: dashboard.py
